--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Package Proc::Generic Version 0.02
+Package Proc::Generic Version 0.03
 
 This is the Proc::Generic package.  It provides a generic interface to
 running background processes.  Through this interface, users can run
@@ -22,21 +22,27 @@ process did not exit, then the process is killed.
 This package currently works on both Unix and Win32 platforms.  Users
 of this package on Win32 systems needs to install the libwin32-?.??
 package by Gurusamy Sarathy (gsar@umich.edu) available from CPAN.
+Recent installations of ActiveState Perl already include this module,
+so it does not need to be installed.
 
 AVAILABILITY
 
 The latest version of this package is available from a CPAN
-archive near you in CPAN/authors/id/B/BZ/BZAJAC/Proc-Background-0.02.tar.gz
-or from the author by contacting Blair Zajac <blair@gps.caltech.edu>.
+archive near you in CPAN/authors/id/B/BZ/BZAJAC/Proc-Background-0.03.tar.gz
+or from the author by contacting Blair Zajac <blair@akamai.com>.
 
 INSTALLATION
 
 In order to use this package you will need Perl version 5.004_04 or
 better.
 
-If you are running on a Windows 95, Windows 98, or Windows NT
-system, then first install the latest libwin32-x.x package from CPAN
-available as CPAN/authors/id/GSAR/libwin32-x.x.zip or
+If you are running on a Windows 95/98/NT/2000 and if the Perl
+installation does not have the libwin32 package installed, then check
+to see if your Perl installation has libwin32 already installed.  You
+can do this by running the normal installation procedure.  If libwin32
+is not installed, then the first step will fail.  You can get the
+latest libwin32-x.x package from CPAN available as
+CPAN/authors/id/GSAR/libwin32-x.x.zip or
 CPAN/authors/id/GSAR/libwin32-x.x.tar.gz.
 
 Once that is completed, you install Proc::Generic as you would install
@@ -70,6 +76,6 @@ utility to extract documentation from the module files directly.
 
 COPYRIGHT
 
-Copyright (c) 1998 Blair Zajac. All rights reserved.  This package is
-free software; you can redistribute it and/or modify it under the same
-terms as Perl itself.
+Copyright (c) 1998-2000 Blair Zajac. All rights reserved.  This
+package is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself.
