--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Thu Apr 20 14:46:31 PDT 2000 <blair@akamai.com> (Blair Zajac)
+
+	Release version 1.00.
+
+Thu Apr 20 14:40:11 PDT 2000 <blair@akamai.com> (Blair Zajac)
+
+	In certain circumstances on older Perls, Proc::Background
+	would complain that @_ could not be modified since it is a
+	read only variable.  Make a copy of @_ and modify that.
+
 Wed Apr 19 19:50:51 PDT 2000 <blair@akamai.com> (Blair Zajac)
 
 	Release version 0.03.
