--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-Package Proc::Generic Version 1.02
+Package Proc::Background Version 1.03
 
-This is the Proc::Generic package.  It provides a generic interface to
-running background processes.  Through this interface, users can run
-background processes on different operating systems without concerning
-themselves about the specifics of doing this.  Users of this package
-create new Proc::Generic objects that provide an object oriented
-interface to process management.  The following methods are provided
-to users of the Proc::Generic package:
+This is the Proc::Background package.  It provides a generic interface
+to running background processes.  Through this interface, users can
+run background processes on different operating systems without
+concerning themselves about the specifics of doing this.  Users of
+this package create new Proc::Background objects that provide an
+object oriented interface to process management.  The following
+methods are provided to users of the Proc::Background package:
 
 	new:        start a new background process.
 	alive:      test to see if the process is still alive.
@@ -15,7 +15,7 @@ to users of the Proc::Generic package:
 	start_time: return the time that the process started.
 	end_time:   return the time when the exit status was retrieved.
 
-A generic function, timed_system, is also included that lets a
+A generic function, timed-system, is also included that lets a
 background process run for a specified amount of time, and if the
 process did not exit, then the process is killed.
 
@@ -30,11 +30,11 @@ AVAILABILITY
 The latest version of this package is available from a CPAN
 archive near you in
 
-	CPAN/authors/id/B/BZ/BZAJAC/Proc-Background-1.02.tar.gz
+    CPAN/authors/id/B/BZ/BZAJAC/
 
 or at
 
-	ftp://ftp.gps.caltech.edu/pub/blair/Perl/
+    ftp://ftp.gps.caltech.edu/pub/blair/Perl/
 
 INSTALLATION
 
@@ -50,26 +50,26 @@ latest libwin32-x.x package from CPAN available as
 CPAN/authors/id/GSAR/libwin32-x.x.zip or
 CPAN/authors/id/GSAR/libwin32-x.x.tar.gz.
 
-Once that is completed, you install Proc::Generic as you would install
-any perl module library, by running these commands:
+Once that is completed, you install Proc::Background as you would
+install any perl module library, by running these commands:
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+    perl Makefile.PL
+    make
+    make test
+    make install
 
 You can edit the configuration section of Makefile.PL to select which
 programs to install in addition to the library itself.  If you don't
 want to install any programs (only the library files) and don't want
 to mess with the Makefile.PL then pass the '-n' option to Makefile.PL:
 
-	perl Makefile.PL -n
+    perl Makefile.PL -n
 
 If you want to install a private copy of this package in some other
 directory, then you should try to produce the initial Makefile with
 something like this command:
 
-	perl Makefile.PL LIB=~/perl
+    perl Makefile.PL LIB=~/perl
 
 DOCUMENTATION
 
